--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Simple react app for Markdown preview",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server --mode development",
+    "build": "webpack --mode production",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,6 +28,7 @@
     "css-loader": "^1.0.0",
     "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^4.5.2",
+    "react-hot-loader": "^4.13.0",
     "style-loader": "^0.23.0",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.1",
@@ -32,8 +37,7 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "marked" : "^2.1.2",
-    "react-hot-loader": "^4.13.0"
+    "marked": "^2.1.2"
   },
   "author": "Kapil",
   "license": "ISC",
